fix 解决一些编译问题